@@ -6,6 +6,8 @@ python-apt (0.7.7) unstable; urgency=low
       Ryan Hass for the test-case) LP: #243630
   * tests/test_hashsums.py:
     - add tests for the hashsum code
+  * apt/package.py:
+    - add "isAutoRemovable()" method
 
  -- Michael Vogt <mvo@debian.org>  Fri, 04 Jul 2008 19:53:28 +0200
 
